Add testing documentation and fix test cases